welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:4: error: ';' expected but ')' found.
	} else { return a + b)
                             ^